component(splash-screen): UI Complete with slider animation

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 @theme {
-	--color-primary-g-l: "#DDE5B6";
-	--color-primary-g: "#ADC178";
+	--color-secondary-g: #dde5b6;
+	--color-primary-g: #adc178;
 }
