component(products): design elements added (customer review popups)

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @theme {
 	--color-secondary-g: #dde5b6;
 	--color-primary-g: #adc178;
+	--color-primary-b: #018be1;
 	--font-hero: "Georgia", "Times New Roman", Times, serif;
 }
 
